# ragflow

RAG_DEMO/: .env.example  .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
RAG_DEMO/data/sample/: README.md
RAG_DEMO/demo_rag/: __init__.py  chunker.py  config.py  embedder.py  generator.py  loader.py  parse.py  pipeline.py  retriever.py  store.py
RAG_DEMO/eval/: __init__.py  questions.json  runner.py
RAG_DEMO/rag/: __init__.py  chunker.py  embedder.py  generator.py  loader.py  pipeline.py  retriever.py  store.py
