[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-demo-minirag"
version = "0.1.0"
description = "Minimal RAG demo: remote embedding + Milvus"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "pymilvus>=2.3.0,<2.5.0",
]

[tool.setuptools.packages.find]
include = ["demo_rag*"]
